--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "0.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/main.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
