--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,19 @@
   },
   "imports": {
     "#prisma": "./generated/prisma/index.js",
+    "#config": "./src/config.js",
     "#routers": "./src/routes/index.js",
     "#controllers": "./src/controllers/index.js",
     "#services": "./src/services/index.js",
-    "#middlewares": "./src/middlewares/index.js"
+    "#middlewares": "./src/middlewares/index.js",
+    "#utils": "./src/utils.js"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "prettier": "3.6.2"
   }
 }
