--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^18.0.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "openai": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "3.6.2"
