--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "openai": "^6.1.0"
   },
