:technologist: improve logger

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "#services": "./src/services/index.js",
     "#schemas": "./src/schemas/index.js",
     "#middlewares": "./src/middlewares/index.js",
+    "#logger": "./src/logger.js",
     "#utils": "./src/utils.js"
   },
   "dependencies": {
@@ -24,9 +25,11 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
-    "openai": "^6.1.0"
+    "openai": "^6.1.0",
+    "pino": "^10.0.0"
   },
   "devDependencies": {
+    "pino-pretty": "^13.1.1",
     "prettier": "3.6.2"
   }
 }
