--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "feather-icons": "^4.29.2",
     "pinia": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.14",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
