:technologist: add prisma generate shortcut

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "dev": "nodemon src/main.js",
+    "generate": "npx prisma generate",
     "seed": "node --env-file=.env prisma/seed.js"
   },
   "imports": {
