--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "src/main.js",
   "scripts": {
-    "dev": "nodemon src/main.js",
+    "start": "nodemon src/main.js",
     "generate": "npx prisma generate",
     "seed": "node --env-file=.env prisma/seed.js"
   },
