--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "main": "src/main.js",
   "scripts": {
-    "start": "nodemon src/main.js",
+    "start": "node src/main.js",
+    "dev": "nodemon src/main.js",
     "generate": "npx prisma generate",
     "seed": "node --env-file=.env prisma/seed.js"
   },
@@ -26,11 +27,11 @@
     "http-status-codes": "^2.3.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10",
     "openai": "^6.1.0",
     "pino": "^10.0.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "pino-pretty": "^13.1.1",
     "prettier": "3.6.2"
   }
