:technologist: fix various things

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,7 +27,7 @@ OPENAI_API_KEY="sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 #----------------------------------------
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
+DB_USER=user
 DB_PASSWORD="your_password"
 DB_NAME=sachat_db
 
