--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "start": "node src/main.js",
     "dev": "nodemon src/main.js",
-    "generate": "npx prisma generate",
     "seed": "node --env-file=.env prisma/seed.js"
   },
   "imports": {
-    "#prisma": "./generated/prisma/index.js",
     "#routers": "./src/routes/index.js",
     "#controllers": "./src/controllers/index.js",
     "#services": "./src/services/index.js",
@@ -28,7 +26,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "openai": "^6.1.0",
-    "pino": "^10.0.0"
+    "pino": "^10.0.0",
+    "prisma": "^6.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
