--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,10 +25,10 @@ OPENAI_API_KEY="sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 #----------------------------------------
 # 4. DATABASE CONFIGURATION
 #----------------------------------------
-DB_HOST=localhost
+DB_HOST=database
 DB_PORT=5432
 DB_USER=user
-DB_PASSWORD="your_password"
-DB_NAME=sachat_db
+DB_PASSWORD="password"
+DB_NAME=sachat
 
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
