--- a/compose.yaml
+++ b/compose.yaml
@@ -6,37 +6,31 @@ services:
   frontend:
     build:
       context: ./frontend
+      target: production
     ports:
-      - 5173:5173
+      - 80:80
     env_file:
       - frontend/.env
-    volumes:
-      - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
     networks:
       - sachat-network
     depends_on:
       - backend
-    command: sh -c "npm run dev -- --host 0.0.0.0"
-    tty: true
-    stdin_open: true
+    restart: unless-stopped
     
   backend:
     build:
       context: ./backend
+      target: production
     ports:
       - 3000:3000
     env_file:
       - backend/.env
-    volumes:
-      - ./backend:/app
-      - backend_node_modules:/app/node_modules
     networks:
       - sachat-network
     depends_on:
       - database
-    command: sh -c "npx prisma migrate dev && npm run dev"
-
+    restart: unless-stopped
+    
   database:
     build:
       context: ./database
@@ -48,12 +42,11 @@ services:
       - postgres-data:/var/lib/postgresql/data
     networks:
       - sachat-network
+    restart: unless-stopped
 
 networks:
   sachat-network:
     driver: bridge
 
 volumes:
-  frontend_node_modules:
-  backend_node_modules:
   postgres-data:
