--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,15 @@
-# DEVELOPMENT
-FROM node:22-alpine AS development
+FROM node:22-alpine AS deps
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
-COPY . .
-EXPOSE 5173
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
 
-# BUILD FOR PRODUCTION
-FROM development AS builder
+FROM node:22-alpine AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 RUN npm run build
 
-# PRODUCTION
-FROM nginx:1.28-alpine AS production
+FROM nginx:1.28-alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
