--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 #----------------------------------------
 # 1. GENERAL APPLICATION SETTINGS
 #----------------------------------------
+NODE_ENV=development
 PORT=3000
 LOG_STACK=true
 
@@ -24,7 +25,7 @@ OPENAI_API_KEY="sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 #----------------------------------------
 # 4. DATABASE CONFIGURATION
 #----------------------------------------
-DB_HOST=database
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=user
 DB_PASSWORD="password"
