--- a/backend/package.json
+++ b/backend/package.json
@@ -14,19 +14,21 @@
     "#services": "./src/services/index.js",
     "#schemas": "./src/schemas/index.js",
     "#middlewares": "./src/middlewares/index.js",
-    "#logger": "./src/logger.js",
-    "#utils": "./src/utils.js"
+    "#helpers": "./src/helpers/index.js",
+    "#utils": "./src/utils/index.js"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "openai": "^6.1.0",
     "pino": "^10.0.0",
+    "pino-http": "^11.0.0",
     "prisma": "^6.16.3"
   },
   "devDependencies": {
