--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,10 @@
 #----------------------------------------
 # 1. GENERAL APPLICATION SETTINGS
 #----------------------------------------
-NODE_ENV=development
 PORT=3000
+NODE_ENV=development
 LOG_STACK=true
+FAKE_DELAY_MS=0
 
 
 #----------------------------------------
