--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,7 @@ FRONTEND_URL=http://localhost:5173
 # Use `openssl rand -hex 64` in your terminal to generate robust keys
 ACCESS_TOKEN_SECRET="your_super_secret_and_long_access_token_key"
 REFRESH_TOKEN_SECRET="your_even_more_secret_and_long_refresh_token_key"
+BCRYPT_ROUNDS=10
 
 OPENAI_API_KEY="sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
