--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,10 @@
     "seed": "node --env-file=.env prisma/seed.js"
   },
   "imports": {
-    "#routers": "./src/routes/index.js",
-    "#controllers": "./src/controllers/index.js",
-    "#services": "./src/services/index.js",
-    "#schemas": "./src/schemas/index.js",
     "#middlewares": "./src/middlewares/index.js",
-    "#errors": "./src/errors/index.js",
-    "#utils": "./src/utils/index.js"
+    "#providers": "./src/providers/index.js",
+    "#core/*": "./src/core/*",
+    "#modules/*": "./src/modules/*"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3",
