--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "@vueuse/core": "^14.0.0",
+    "dompurify": "^3.3.0",
     "feather-icons": "^4.29.2",
     "jwt-decode": "^4.0.0",
+    "marked": "^16.4.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
